# file-to-c-array

./: CMakeLists.txt
include/: file_to_c_array.h
src/: file_to_c_array.c  main.c
